Keep cache key order stable